# binutils

./: Cargo.toml
src/: address.rs  definition.rs  lib.rs  serializable.rs  symbols.rs
src/executable/: header.rs  mod.rs  symbols.rs
src/executable/segments/: common.rs  flags.rs  header.rs  mod.rs  text.rs
src/object_file/: header.rs  mod.rs  relocations.rs  section.rs  serializable.rs  symbols.rs
src/object_file/placed/: mod.rs
src/object_file/sections/: common.rs  header.rs  mod.rs  text.rs
