[package]
name = "monistode-binutils"
version = "0.1.1"
edition = "2021"
description = "A cleaner rust backend implementation of the monistode binutils"
license = "MIT"

[dependencies]
bitvec = "1.0.1"
convert_case = "0.6.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
